force-app/main/default/objects/LLC_BI__Covenant__c/LLC_BI__Covenant__c.object-meta.xml
<CustomObject>
    <description>The Covenant Object contains information about loan covenants that can be related to a relationship or a contact</description>
    <label>Covenant</label>
    <nameField>
        <displayFormat>COV-{00000000}</displayFormat>
        <label>Covenant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Covenants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>