force-app/main/default/objects/LLC_BI__Covenant__c/fields/LLC_BI__Account__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is required. It is manually populated when a covenant is created through the loan, otherwise it is automatically populated. It identifies the relationship associated with the covenant record and is automatically populated when creating a new covenant record.</description>
    <inlineHelpText>Account that the Covenant applies to.</inlineHelpText>
    <label>Relationship</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Covenants</relationshipLabel>
    <relationshipName>Covenants</relationshipName>
    <type>Lookup</type>
</CustomField>