force-app/main/default/objects/LLC_BI__Covenant__c/fields/LLC_BI__Covenant_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Covenant_Name__c</fullName>
    <description>This field is optional. It is manually populated. It allows users to enter a Name (description) for the Covenant record. This field is no longer recommended for use.</description>
    <label>Covenant Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>