force-app/main/default/objects/LLC_BI__Covenant__c/fields/LLC_BI__Financial_Indicator_Value__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Financial_Indicator_Value__c</fullName>
    <description>This field is manually populated. The value that&apos;s being confirmed with the financial indicator covenant. IE: DSC of  at least 1.25</description>
    <inlineHelpText>The value that&apos;s being confirmed with the financial indicator covenant. IE: DSC of  at least 1.25</inlineHelpText>
    <label>Financial Indicator Value</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>