force-app/main/default/objects/LLC_BI__Covenant__c/fields/LLC_BI__Frequency__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Frequency__c</fullName>
    <description>This field is manually populated. Frequency that a covenant is to be tested.</description>
    <inlineHelpText>Frequency</inlineHelpText>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Biannual</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>