force-app/main/default/objects/LLC_BI__Covenant__c/fields/LLC_BI__Frequency_Months__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Frequency_Months__c</fullName>
    <description>This field is automatically populated via a formula. It automatically translates the Covenant Frequency into a numeric number (e.g., Annually = 12).</description>
    <formula>IF( ISPICKVAL(LLC_BI__Frequency__c, &apos;Annually&apos;), 12,
IF(ISPICKVAL(LLC_BI__Frequency__c, &apos;Quarterly&apos;), 3,
IF(ISPICKVAL(LLC_BI__Frequency__c, &apos;Semi-Annually&apos;), 6,
IF(ISPICKVAL(LLC_BI__Frequency__c, &apos;Every 2 Months&apos;),2,
IF(ISPICKVAL(LLC_BI__Frequency__c, &apos;Monthly&apos;),1,0)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Frequency Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>