force-app/main/default/objects/LLC_BI__Covenant__c/fields/LLC_BI__Last_Evaluation_Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Last_Evaluation_Status__c</fullName>
    <description>This field is automatically populated. Last Evaluation Status populated from the Covenant Compliance record</description>
    <label>Last Evaluation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>